--- a/_posts/2019-11-17-example-1.md
+++ b/_posts/2019-11-17-example-1.md
@@ -10,24 +10,23 @@ length: "52:14" # mm:ss
 shows: [first]
 ---
 
+# Item Title  
+
 The post from the first 
 Item 1  
+## Item Title  
 [Item URL](https://github.com/PandaSekh/Jekyll-Podcaster)  
-<img src="https://mng.listenheadlines.com/f.php?87374b4f" alt="Podcast Cover">  
-  
 
+## Item Title  
 Item 1  
 [Item URL](https://github.com/PandaSekh/Jekyll-Podcaster)  
-<img src="https://mng.listenheadlines.com/f.php?87374b4f" alt="Podcast Cover">  
   
-  
+## Item Title  
 Item 1  
 [Item URL](https://github.com/PandaSekh/Jekyll-Podcaster)  
-<img src="https://mng.listenheadlines.com/f.php?87374b4f" alt="Podcast Cover">  
   
-  
+## Item Title  
 Item 1  
 [Item URL](https://github.com/PandaSekh/Jekyll-Podcaster)  
-<img src="https://mng.listenheadlines.com/f.php?87374b4f" alt="Podcast Cover">  
   
   
