--- a/_posts/2019-11-17-example-1.md
+++ b/_posts/2019-11-17-example-1.md
@@ -14,14 +14,14 @@ tags: [first]
 
 The post from the first 
 Item 1  
-## Item Title  
+### Item Title  
 [Item URL](https://github.com/PandaSekh/Jekyll-Podcaster)  
 
-## Item Title  
+#### Item Title  
 Item 1  
 [Item URL](https://github.com/PandaSekh/Jekyll-Podcaster)  
   
-## Item Title  
+##### Item Title  
 Item 1  
 [Item URL](https://github.com/PandaSekh/Jekyll-Podcaster)  
   
