--- a/_posts/2019-11-17-example-1.md
+++ b/_posts/2019-11-17-example-1.md
@@ -10,22 +10,22 @@ length: "52:14" # mm:ss
 tags: [first]
 ---
 
-# Item Title  
+# Item Title 1 
 
 The post from the first 
 Item 1  
-### Item Title  
+### Item Title 3  
 [Item URL](https://github.com/PandaSekh/Jekyll-Podcaster)  
 
-#### Item Title  
+#### Item Title 4  
 Item 1  
 [Item URL](https://github.com/PandaSekh/Jekyll-Podcaster)  
   
-##### Item Title  
+##### Item Title 5  
 Item 1  
 [Item URL](https://github.com/PandaSekh/Jekyll-Podcaster)  
   
-## Item Title  
+## Item Title 2   
 Item 1  
 [Item URL](https://github.com/PandaSekh/Jekyll-Podcaster)  
   
