--- a/_posts/2019-11-17-example-1.md
+++ b/_posts/2019-11-17-example-1.md
@@ -10,26 +10,27 @@ tags: [news,world]
 show: world-news
 ---
 
-# Item Title 1 
+# Item Heading 1
 
-The post from the first 
+The post from the first  
 Item 1  
-### Item Title 3  
+
+## Item Title 3
+
 [Item URL](https://github.com/PandaSekh/Jekyll-Podcaster)  
 
+### Item Title 4  
 
-#### Item Title 4  
 Item 1  
 [Item URL](https://github.com/PandaSekh/Jekyll-Podcaster)  
 
+#### Item Title 5  
 
-##### Item Title 5  
-Item 1  
-[Item URL](https://github.com/PandaSekh/Jekyll-Podcaster)  
-  
-
-## Item Title 2   
 Item 1  
 [Item URL](https://github.com/PandaSekh/Jekyll-Podcaster)  
   
+## Item Title 2
+
+Item 1  
+[Item URL](https://github.com/PandaSekh/Jekyll-Podcaster)  
   
